Question 4/canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-canary-svc
spec:
  selector:
    app: web-app
    track: canary
  ports:
    - name: http
      port: 80
      targetPort: 80
