Question 4/stable-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-stable-svc
spec:
  selector:
    app: web-app
    track: stable
  ports:
    - name: http
      port: 80
      targetPort: 80
